--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.18.76",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -41,8 +39,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.3",
-    "jest": "^27.5.1"
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "cypress": "^13.13.3",
+    "jest": "^27.5.1",
+    "typescript": "^5.5.4"
   }
 }
