--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
+    "firebase": "^10.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,11 +43,12 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/cypress": "^1.1.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "cypress": "^13.13.3",
     "jest": "^27.5.1",
-    "typescript": "^5.5.4"
+    "typescript": "^4.9.5"
   }
 }
