--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.18",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.13.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -48,6 +51,7 @@
     "@types/react": "^18.3.4",
     "cypress": "^13.13.3",
     "jest": "^27.5.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.9.5"
   }
 }
