--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.18",
