--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://radchenko87dmytro.github.io/TodolistWithTypeScript",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,14 +47,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
-    "@types/cypress": "^1.1.3",
+    "@types/cypress": "^1.1.6",
     "@types/firebase": "^3.2.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
-    "cypress": "^13.13.3",
+    "cypress": "^13.17.0",
+    "gh-pages": "^6.3.0",
     "jest": "^27.5.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^4.9.5"
