feature: commit before release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Radchenko87dmytro.github.io/TodolistWithTypeScript",
+  "homepage": "https://Radchenko87dmytro.github.io/My-Portfolio",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
